// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders disabled input 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
  border: 1px solid rgba(37,37,37,0.3);
  background: #f5f5f5;
}

.c1 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 0;
  color: #5d5d5d;
}

.c1::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::placeholder {
  color: rgba(37,37,37,0.3);
}

<div
  class=""
  disabled=""
>
  <div
    class="c0"
    disabled=""
  >
    <input
      class="c1"
      disabled=""
    />
  </div>
</div>
`;

exports[`Input renders error input 1`] = `
.c3 {
  font-family: Roboto;
  color: #5d5d5d;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
  border: 1px solid #e53b3b;
}

.c1 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 0;
  color: #5d5d5d;
}

.c1::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::placeholder {
  color: rgba(37,37,37,0.3);
}

.c2 {
  margin: 0;
  margin-top: 5px;
  color: #e53b3b;
  font-size: 12px;
}

<div
  class=""
>
  <div
    class="c0"
  >
    <input
      class="c1"
    />
  </div>
  <p
    class="c2 c3"
  >
    error message
  </p>
</div>
`;

exports[`Input renders input with caption 1`] = `
.c4 {
  font-family: Roboto;
  color: #5d5d5d;
}

.c0:focus-within div {
  border: 1px solid #007dfe;
}

.c0:focus-within p:first-child {
  color: #007dfe;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
}

.c2 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 0;
  color: #5d5d5d;
}

.c2::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::placeholder {
  color: rgba(37,37,37,0.3);
}

.c3 {
  margin: 0;
  margin-top: 5px;
  color: #7f7f7f;
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
    />
  </div>
  <p
    class="c3 c4"
  >
    Caption
  </p>
</div>
`;

exports[`Input renders input with label 1`] = `
.c2 {
  font-family: Roboto;
  color: #5d5d5d;
}

.c0:focus-within div {
  border: 1px solid #007dfe;
}

.c0:focus-within p:first-child {
  color: #007dfe;
}

.c3 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
}

.c1 {
  margin: 0;
  margin-bottom: 5px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c4 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 0;
  color: #5d5d5d;
}

.c4::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c4::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c4:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c4::placeholder {
  color: rgba(37,37,37,0.3);
}

<div
  class="c0"
>
  <p
    class="c1 c2"
  >
    Label
  </p>
  <div
    class="c3"
  >
    <input
      class="c4"
    />
  </div>
</div>
`;

exports[`Input renders input with left icon 1`] = `
.c0:focus-within div {
  border: 1px solid #007dfe;
}

.c0:focus-within p:first-child {
  color: #007dfe;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
}

.c2 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 4px;
  padding-right: 0;
  color: #5d5d5d;
}

.c2::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::placeholder {
  color: rgba(37,37,37,0.3);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        clip-rule="evenodd"
        d="M8 8C10.21 8 12 6.21 12 4C12 1.79 10.21 0 8 0C5.79 0 4 1.79 4 4C4 6.21 5.79 8 8 8ZM8 10C5.33 10 0 11.34 0 14V15C0 15.55 0.45 16 1 16H15C15.55 16 16 15.55 16 15V14C16 11.34 10.67 10 8 10Z"
        fill="#7F7F7F"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="c2"
    />
  </div>
</div>
`;

exports[`Input renders input with right icon 1`] = `
.c0:focus-within div {
  border: 1px solid #007dfe;
}

.c0:focus-within p:first-child {
  color: #007dfe;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
}

.c2 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 4px;
  color: #5d5d5d;
}

.c2::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c2::placeholder {
  color: rgba(37,37,37,0.3);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
    />
    <svg
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        clip-rule="evenodd"
        d="M8 8C10.21 8 12 6.21 12 4C12 1.79 10.21 0 8 0C5.79 0 4 1.79 4 4C4 6.21 5.79 8 8 8ZM8 10C5.33 10 0 11.34 0 14V15C0 15.55 0.45 16 1 16H15C15.55 16 16 15.55 16 15V14C16 11.34 10.67 10 8 10Z"
        fill="#7F7F7F"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Input renders verified input 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 328px;
  height: 36px;
  padding: 8px 10px;
  border: 1px solid #7f7f7f;
  border: 1px solid #17ae29;
}

.c1 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  border: none;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  background: transparent;
  padding-left: 0;
  padding-right: 0;
  color: #5d5d5d;
}

.c1::-webkit-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::-moz-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1:-ms-input-placeholder {
  color: rgba(37,37,37,0.3);
}

.c1::placeholder {
  color: rgba(37,37,37,0.3);
}

<div
  class=""
>
  <div
    class="c0"
  >
    <input
      class="c1"
    />
  </div>
</div>
`;
